Fix room height when there is too much content

--- a/static/scss/pages/_room.scss
+++ b/static/scss/pages/_room.scss
@@ -1,7 +1,7 @@
 .room-body {
   overflow-x: hidden;
   width: 100vw;
-  min-height: 100%;
+  height: 100%;
 }
 
 .room {
